force-app/main/default/objects/Interest__c/Interest__c.object-meta.xml
<CustomObject>
    <description>An interest (a.k.a. group) on the MinnPost E-mail Newsletters list (updated from Mailchimp automatically).</description>
    <label>Interest</label>
    <nameField>
        <label>Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>