force-app/main/default/objects/Interest__c/fields/InterestCategory__c.field-meta.xml
<CustomField>
    <fullName>InterestCategory__c</fullName>
    <label>Interest Category</label>
    <referenceTo>InterestCategory__c</referenceTo>
    <relationshipLabel>Interests</relationshipLabel>
    <relationshipName>Interests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>