force-app/main/default/objects/Interest__c/fields/InterestID__c.field-meta.xml
<CustomField>
    <fullName>InterestID__c</fullName>
    <description>The Mailchimp ID of the interest (group).</description>
    <externalId>true</externalId>
    <label>Interest ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>