force-app/main/default/objects/Interest__c/fields/SubscriberCount__c.field-meta.xml
<CustomField>
    <fullName>SubscriberCount__c</fullName>
    <label>Subscriber Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>